@@ -715,6 +715,11 @@ examples (like keyboard selection and bootloader installation) may not be
 relevant and will need to be replaced by debconf settings appropriate for
 your architecture.
 
+</para><para>
+
+Details on how the different Debian Installer components actually work can be
+found in <xref linkend="module-details"/>.
+
 </para>
  
   <sect2 id="preseed-l10n">
