@@ -38,6 +38,8 @@ installation-guide (2010xxxx) UNRELEASED; urgency=low
     "Automating the installation using preseeding".
   * Document dpkg-reconfigure keyboard-configuration instead of kbd-config.
   * Add installation-guide-kfreebsd-{i386,amd64} packages.
+  * Reference Debian Installer modules documentation from the preseed section
+    (Closes: Bug#603159).
 
   [ Joey Hess ]
   * Update USB stick documentation to reflect isohybird mini.iso files,
